--- a/Scarb.toml
+++ b/Scarb.toml
@@ -7,13 +7,11 @@ edition = "2024_07"
 
 [dependencies]
 starknet = "2.15.0"
+cairo_execute = "2.1.1"
 
 [dev-dependencies]
 snforge_std = "0.55.0"
 assert_macros = "2.15.0"
-
-[[target.starknet-contract]]
-sierra = true
 
 [scripts]
 test = "snforge test"
@@ -50,3 +48,12 @@ allow-prebuilt-plugins = ["snforge_std"]
 
 # [features]                                                 # Used for conditional compilation
 # enable_for_tests = []                                      # Feature name and list of other features that should be enabled with it
+
+
+[cairo]
+enable-gas = false
+
+
+[[target.executable]]
+name = "week1"
+function = "week1::main"
